@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    + locationX:int
    + locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + FlyingObject(int locationX, int locationY, int speedX, int speedY):void
    + forward():void
    + crash(FlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
    + setSpeed(int speedX, int speedY):void
}
abstract class AbstractAircraft
{
	# axHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp):void
    + decreaseHp(int decrease):void
    + getHp():int
    - direction:int
    + getDirection():int
    - power:int
    + getPower:int
    + {abstract} shoot():List<Bullet>
    + {abstract} form(): int
 }

abstract class AbstractBullet
{
    - power:int
    + Bullet(int locationX, int locationY, int speedX, int speedY, int power):void
    + forward():void
	+ getPower():int
}

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-up- AbstractBullet
AbstractFlyingObject <|-up- AbsractProp

AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- BossEnemy
HeroAircraft --> HeroAircraft

AbstractBullet <|-- HeroBullet
AbstractBullet <|-- EnemyBullet

AbsractProp <|-- HpSupply
AbsractProp <|-- FireSupply
AbsractProp <|-- BombSupply

HeroAircraft o-- HeroBullet
EliteEnemy o-- EnemyBullet

EliteFactory..> EliteEnemy
BossFactory..> BossEnemy
MobFactory..> MobEnemy
HpFactory ..> HpSupply
BombFactory ..> BombSupply
FireFactory ..> FireSupply
class HeroAircraft {

    -{static}instance:HeroAircraft
    +{static}getInstance():HeroAircraft
    - power:int
    - direction:int
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp):void
    + forward():void
    + shoot():List<Bullet>
}

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp):void
    + forward():void
    + shoot():List<Bullet>
}

class EliteEnemy {
    - shootNum:int
    - power:int
    - direction:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp) :void
    + shoot():List<Bullet>
    + forward():void
}

class BossEnemy {
    - shootNum:int
    - power:int
    - direction:int
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp) :void
    + shoot():List<Bullet>
    + forward():void
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power):void
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power):void
}

abstract class AbsractProp {
    +AbsractProp(int locationX, int locationY):void
    +{abstract} use ():void
    + prop(): AbsractProp
    +forward():void

}

class HpSupply{
    +HpSupply(int locationX, int locationY):void
    +use():void
}

class FireSupply{
    +FireSupply(int locationX, int locationY):void
    +use():void
}

class BombSupply{
    +BombSupply(int locationX, int locationY):void
    +use():void
}

@enduml